[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ax-auditor"
version = "0.1.0"
description = "Agent Experience Auditor — audit how agent-friendly any web service is"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
ax-auditor = "ax_auditor.cli:main"
